<resources>
    <string name="app_name">Criminal_Intent_Sav_KompFour</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_solved_label">Solved</string>
    <string name="new_crime">new crime</string>
    <string name="crime_suspect_text">CHOOSE SUSPECT</string>
    <string name="crime_report_text">SEND CRIME REPORT</string>
    <string name="crime_report">%1$s!The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect</string>
    <string name="crime_report_suspect">the suspect is %s</string>
    <string name="crime_report_subject">CriminalIntent</string>
    <string name="send_report">Send crime</string>
    <string name="call">CALL</string>
</resources>